[gd_scene load_steps=2 format=3 uid="uid://bp8f3h7tk306n"]

[ext_resource type="Script" uid="uid://rc8tuttpdtl3" path="res://scenes/UI/pause_menu.gd" id="1_qo2fb"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qo2fb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 554.0
offset_top = 194.0
offset_right = 1106.0
offset_bottom = 706.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="btn_resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Resume"
icon_alignment = 1

[node name="btn_restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 70
text = "Restart
"

[node name="btn_quit_to_title" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Quit To Title"

[connection signal="pressed" from="PanelContainer/VBoxContainer/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/btn_quit_to_title" to="." method="_on_btn_quit_to_title_pressed"]
